1999-04-06  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* mime-edit.el (mime-delete-field): Use `std11-field-end'.

1999-04-05  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mime-pgp.el (mime-pgp-parse-verify-error-for-pgp,
	mime-pgp-parse-verify-error-for-pgp50,
	mime-pgp-parse-verify-error-for-gpg): New functions.
	(mime-verify-application/pgp-signature): Use one of them.
	(mime-pgp-parse-verify-error): New macro.
	(mime-pgp-check-signature): Returns nil if verify failed under PGP
	5.0i.

1999-04-05  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mime-pgp.el (mime-pgp-detect-version): New function.
	(mime-verify-application/pgp-signature): Use it.
	(mime-decrypt-application/pgp-encrypted): Use it.
	(TopLevel): Require `std11'.

	* mime-mc.el (mime-mc-gpg-sign-region): Remove ("--passphrase-fd"
	"0") from the list of arguments.
	(mime-mc-shell-file-name): New user option.
	(mime-mc-pgp50-process-region, mime-mc-gpg-process-region): Use it.

1999-03-30  Keiichi Suzuki  <kei-suzu@mail.wbs.ne.jp>

	* mime-edit.el (mime-edit-decode-single-part-in-buffer): Normalize
	EOL code in MIME encoded text part.

1999-03-27  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-view.el (mime-preview-follow-current-entity): Don't copy
	header if current entity is root.

1999-03-26  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mime-mc.el: Load "expect", if it exists, at the compile time.

1999-03-25  Katsumi Yamaoka   <yamaoka@jpl.org>

	* NEWS, mime-ui-en.sgml, mime-ui-ja.sgml: Update for the command
	`mime-mc-setversion'.

	* semi-setup.el (TopLevel): Autoload "mime-mc" for the command
	`mime-mc-setversion'.

	* mime-mc.el (mime-mc-pgp50-sign-region): Use "micalg=pgp-sha1"
	instead of "micalg=pgp-md5"; use `mime-mc-pgp50-sign-parser' for
	the parser if a detached sign is required.
	(mime-mc-pgp50-sign-parser): New function for parsing a detached
	sign.
	(mime-mc-setversion): New command.

	* mime-edit.el (mime-edit-preview-message): Inherit the value of